--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <title>Projet - Fibulama</title>
+        <meta charset="utf-8" />
+        <meta name="Titre" content="Projet - Fibulama">
+        <meta name="Description" content="Découvrons, apprenons et révisons">
+        <meta name="Auteur" content="Albane">
+        <meta name="Viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/92636fc0e0.js" crossorigin="anonymous"></script>
+        <link rel="Accueil" href="index.html">
+        <link rel="Anatomie générale" href="anatomie-générale.html">
+        <link rel="Podologie" href="podologie.html">
+        <link rel="Tronc théorie" href="tronc-théorie.html">
+        <link rel="Membre supérieur" href="membre-supérieur.html">
+        <link rel="Compression" href="compression.html">
+        <link rel="Réglementation" href="réglementation.html">
+        <link rel="Communication" href="communication.html">
+        <link rel="Droit" href="droit.html">
+        <link rel="Psychologie" href="psychologie.html">
+        <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/révisions.css">
+        <link rel="icon-lama" href="images/icon-lama.png">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+
+        <header>
+            <img src="images/icon-lama.png" alt="icon-lama">
+            <h1>Projet - Fibulama</h1>
+        </header>
+
+        <main>
+
+            <div class="introduction" id="introduction">
+                <h2>Bienvenue</h2>
+                <p>Je m'appelle <strong>Albane</strong>, je participe à la formation pour devenir <strong>Orthopédiste Orthésiste Podologiste</strong> au sein de l'<strong>ESOOP</strong>.</p>
+                <p><strong>Notre Objectif</strong>  : Réussir la formation en un an !</p>
+            </div>
+    
+            <div class="revisions" id="revisions">
+                <h2>Mes révisions</h2>
+                <div class="revision-all">
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Anatomie générale</h3>
+                            <button class="btn-projet" onclick="location.href='anatomie-générale.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Podologie</h3>
+                            <button class="btn-projet" onclick="location.href='podologie.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Tronc théorie</h3>
+                            <button class="btn-projet" onclick="location.href='tronc-théorie.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Membre supérieur</h3>
+                            <button class="btn-projet" onclick="location.href='membre-supérieur.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Compression</h3>
+                            <button class="btn-projet" onclick="location.href='compression.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Réglementation</h3>
+                            <button class="btn-projet" onclick="location.href='réglementation.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Communication</h3>
+                            <button class="btn-projet" onclick="location.href='communication.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Droit</h3>
+                            <button class="btn-projet" onclick="location.href='droit.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                    <div class="revision">
+                        <div class="revision-description">
+                            <h3>Psychologie</h3>
+                            <button class="btn-projet" onclick="location.href='psychologie.html'">Accéder aux révisions</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        <footer>
+            <img src="images/icon-lama.png" alt="icon-lama">
+            <p>Albane CYPCARZ - Orthopédiste Orthésiste Podologiste en devenir</p>
+        </footer>
+
+    </body>
+
+</html>
 
