--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="Psychologie" href="psychologie.html">
         <link rel="stylesheet" href="./css/index.css">
         <link rel="stylesheet" href="./css/révisions.css">
-        <link rel="icon-lama" type="image/png" href="images/icon-lama.png">
+        <link rel="icon" type="image/png" href="images/icon-lama.png">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
 
