--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <link rel="Communication" href="communication.html">
         <link rel="Droit" href="droit.html">
         <link rel="Psychologie" href="psychologie.html">
-        <link rel="stylesheet" href="./css/index.css">
-        <link rel="stylesheet" href="./css/révisions.css">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/révisions.css">
         <link rel="icon" type="image/png" href="images/icon-lama.png">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
