--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
     <body>
         <header>
-            <img src="images/icon-lama.png" alt="icon-lama">
-            <h1>Projet - Fibulama</h1>
+            <img src="images/logo-lama.png" alt="logo-lama">
         </header>
 
         <main>
