--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <body>
         <header>
-            <img src="images/logo-lama.png" alt="logo-lama">
+            <img src="images/Logo-lama.png" alt="logo-lama">
         </header>
 
         <main>
