--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
         <script src="https://kit.fontawesome.com/92636fc0e0.js" crossorigin="anonymous"></script>
         <link rel="Accueil" href="index.html">
         <link rel="Anatomie générale" href="anatomie-générale.html">
-        <link rel="Podologie" href="podologie.html">
-        <link rel="Tronc théorie" href="tronc-théorie.html">
+        <link rel="Membre inférieur" href="membre-inférieur.html">
+        <link rel="Tronc" href="tronc.html">
         <link rel="Membre supérieur" href="membre-supérieur.html">
         <link rel="Compression" href="compression.html">
-        <link rel="Réglementation" href="réglementation.html">
-        <link rel="Communication" href="communication.html">
-        <link rel="Droit" href="droit.html">
-        <link rel="Psychologie" href="psychologie.html">
+        <link rel="Bonus" href="bonus.html">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/révisions.css">
         <link rel="icon" type="image/png" href="images/icon-lama.png">
@@ -47,14 +44,14 @@
                     </div>
                     <div class="revision">
                         <div class="revision-description">
-                            <h3>Podologie</h3>
-                            <button class="btn-projet" onclick="location.href='podologie.html'">Accéder aux révisions</button>
+                            <h3>Membre Inférieur</h3>
+                            <button class="btn-projet" onclick="location.href='membre-inférieur.html'">Accéder aux révisions</button>
                         </div>
                     </div>
                     <div class="revision">
                         <div class="revision-description">
-                            <h3>Tronc théorie</h3>
-                            <button class="btn-projet" onclick="location.href='tronc-théorie.html'">Accéder aux révisions</button>
+                            <h3>Tronc</h3>
+                            <button class="btn-projet" onclick="location.href='tronc.html'">Accéder aux révisions</button>
                         </div>
                     </div>
                     <div class="revision">
@@ -71,26 +68,8 @@
                     </div>
                     <div class="revision">
                         <div class="revision-description">
-                            <h3>Réglementation</h3>
-                            <button class="btn-projet" onclick="location.href='réglementation.html'">Accéder aux révisions</button>
-                        </div>
-                    </div>
-                    <div class="revision">
-                        <div class="revision-description">
-                            <h3>Communication</h3>
-                            <button class="btn-projet" onclick="location.href='communication.html'">Accéder aux révisions</button>
-                        </div>
-                    </div>
-                    <div class="revision">
-                        <div class="revision-description">
-                            <h3>Droit</h3>
-                            <button class="btn-projet" onclick="location.href='droit.html'">Accéder aux révisions</button>
-                        </div>
-                    </div>
-                    <div class="revision">
-                        <div class="revision-description">
-                            <h3>Psychologie</h3>
-                            <button class="btn-projet" onclick="location.href='psychologie.html'">Accéder aux révisions</button>
+                            <h3>Bonus</h3>
+                            <button class="btn-projet" onclick="location.href='bonus.html'">Accéder aux révisions</button>
                         </div>
                     </div>
                 </div>
