--- a/anatomie-générale.html
+++ b/anatomie-générale.html
@@ -28,36 +28,43 @@
 
         <main>
             <h1>Anatomie Générale</h1>
-            <div class="bibliothèque">
-                <div class="livre">
-                    <h2>Introduction</h2>
-                    <iframe src="PDF/Introduction.pdf"></iframe>
-                    <a href="PDF/Introduction.pdf">Télécharger le cours</a>
-                </div>
-                <div class="livre">
-                    <h2>Ostéologie</h2>
-                    <iframe src="PDF/Ostéologie.pdf"></iframe>
-                    <a href="PDF/Ostéologie.pdf">Télécharger le cours</a>
-                </div>
-                <div class="livre">
-                    <h2>Arthrologie</h2>
-                    <iframe src="PDF/Arthrologie.pdf"></iframe>
-                    <a href="PDF/Arthrologie.pdf">Télécharger le cours</a>
-                </div>
-                <div class="livre">
-                    <h2>Myologie</h2>
-                    <iframe src="PDF/Myologie.pdf"></iframe>
-                    <a href="PDF/Myologie.pdf">Télécharger le cours</a>
-                </div>
-                <div class="livre">
-                    <h2>Colonne & Côtes</h2>
-                    <iframe src="PDF/Colonne & côtes.pdf"></iframe>
-                    <a href="PDF/Colonne & côtes.pdf">Télécharger le cours</a>
-                </div>
-                <div class="livre">
-                    <h2>Bassin</h2>
-                    <iframe src="PDF/Bassin.pdf"></iframe>
-                    <a href="PDF/Bassin.pdf">Télécharger le cours</a>
+            <div class="librairie">
+                <div class="bibliothèque">
+                    <div class="livre">
+                        <h2>Introduction</h2>
+                        <iframe src="PDF/Anatomie-générale/Introduction.pdf"></iframe>
+                        <button class="btn-cours" onclick="location.href='PDF/Anatomie-générale/Introduction.pdf'">Télécharger le cours</button>
+                    </div>
+                    <div class="livre">
+                        <h2>Ostéologie</h2>
+                        <iframe src="PDF/Anatomie-générale/Ostéologie.pdf"></iframe>
+                        <button class="btn-cours" onclick="location.href='PDF/Anatomie-générale/Ostéologie.pdf'">Télécharger le cours</button>
+                    </div>
+                    <div class="livre">
+                        <h2>Arthrologie</h2>
+                        <iframe src="PDF/Anatomie-générale/Arthrologie.pdf"></iframe>
+                        <button class="btn-cours" onclick="location.href='PDF/Anatomie-générale/Arthrologie.pdf'">Télécharger le cours</button>
+                    </div>
+                    <div class="livre">
+                        <h2>Myologie</h2>
+                        <iframe src="PDF/Anatomie-générale/Myologie.pdf"></iframe>
+                        <button class="btn-cours" onclick="location.href='PDF/Anatomie-générale/Myologie.pdf'">Télécharger le cours</button>
+                    </div>
+                    <div class="livre">
+                        <h2>Colonne & Côtes</h2>
+                        <iframe src="PDF/Anatomie-générale/Colonne & côtes.pdf"></iframe>
+                        <button class="btn-cours" onclick="location.href='PDF/Anatomie-générale/Colonne & côtes.pdf'">Télécharger le cours</button>
+                    </div>
+                    <div class="livre">
+                        <h2>Bassin</h2>
+                        <iframe src="PDF/Anatomie-générale/Bassin.pdf"></iframe>
+                        <button class="btn-cours" onclick="location.href='PDF/Anatomie-générale/Bassin.pdf'">Télécharger le cours</button>
+                    </div>
+                    <div class="livre">
+                        <h2>Coeur</h2>
+                        <iframe src="PDF/Anatomie-générale/Système cardiovasculaire.pdf"></iframe>
+                        <button class="btn-cours" onclick="location.href='PDF/Anatomie-générale/Système cardiovasculaire.pdf'">Télécharger le cours</button>
+                    </div>
                 </div>
             </div>
         </main>
