--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
                     </div>
                 </div>
             </div>
-
+        </main>
         <footer>
             <img src="images/icon-lama.png" alt="icon-lama">
             <p>Albane CYPCARZ - Orthopédiste Orthésiste Podologiste en devenir</p>
         </footer>
-
     </body>
 
 </html>
