--- a/membre-inférieur.html
+++ b/membre-inférieur.html
@@ -27,15 +27,84 @@
         </header>
 
         <main>
-            
+            <h1>Membre Inférieur</h1>
+            <div class="bibliothèque">
+                <div class="étagère">
+                    <div class="librairie">
+                        <div class="livre">
+                            <h2>Généralités</h2>
+                            <iframe src="PDF/Membre Inférieur/Généralités du Membre Inférieur.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Généralités du Membre Inférieur.pdf'">Télécharger le cours</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="étagère">
+                    <h2>Anatomie - Ostéologie</h2>
+                    <div class="librairie">
+                        <div class="livre">
+                            <h2>Ostéologie du pied</h2>
+                            <iframe src="PDF/Membre Inférieur/Ostéologie du pied.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Ostéologie du pied.pdf'">Télécharger le cours</button>
+                        </div>
+                        <div class="livre">
+                            <h2>Ostéologie de la jambe</h2>
+                            <iframe src="PDF/Membre Inférieur/Ostéologie de la jambe.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Ostéologie de la jambe.pdf'">Télécharger le cours</button>
+                        </div>
+                        <div class="livre">
+                            <h2>Ostéologie de la cuisse</h2>
+                            <iframe src="PDF/Membre Inférieur/Ostéologie de la cuisse.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Ostéologie de la cuisse.pdf'">Télécharger le cours</button>
+                        </div>
+                        <div class="livre">
+                            <h2>Ostéologie du bassin</h2>
+                            <iframe src="PDF/Membre Inférieur/Ostéologie du bassin.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Ostéologie du bassin.pdf'">Télécharger le cours</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="étagère">
+                    <h2>Anatomie - Arthrologie</h2>
+                    <div class="librairie">
+                        <div class="livre">
+                            <h2>Arthrologie de la cheville et du pied</h2>
+                            <iframe src="PDF/Membre Inférieur/Arthrologie de la cheville et du pied.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Arthrologie de la cheville et du pied.pdf'">Télécharger le cours</button>
+                        </div>
+                        <div class="livre">
+                            <h2>Arthrologie de la jambe</h2>
+                            <iframe src="PDF/Membre Inférieur/Arthrologie de la jambe.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Arthrologie de la jambe.pdf'">Télécharger le cours</button>
+                        </div>
+                        <div class="livre">
+                            <h2>Arthrologie du genou</h2>
+                            <iframe src="PDF/Membre Inférieur/Arthrologie du genou.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Arthrologie du genou.pdf'">Télécharger le cours</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="étagère">
+                    <h2>Anatomie - Myologie</h2>
+                    <div class="librairie">
+                        <div class="livre">
+                            <h2>Myologie du pied</h2>
+                            <iframe src="PDF/Membre Inférieur/Myologie du pied.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Myologie du pied.pdf'">Télécharger le cours</button>
+                        </div>
+                        <div class="livre">
+                            <h2>Myologie de la jambe</h2>
+                            <iframe src="PDF/Membre Inférieur/Myologie de la jambe.pdf"></iframe>
+                            <button class="btn-cours" onclick="location.href='PDF/Membre Inférieur/Myologie de la jambe.pdf'">Télécharger le cours</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <footer>
             <img src="images/icon-lama.png" alt="icon-lama">
             <p>Albane CYPCARZ - Orthopédiste Orthésiste Podologiste en devenir</p>
         </footer>
-
     </body>
-
 </html>
 
